--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "axios": "^1.7.7",
     "country-flag-icons": "^1.5.9",
     "daisyui": "^4.6.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
